[gd_scene load_steps=15 format=2]

[ext_resource path="res://TheodoreRoethkePoem.gd" type="Script" id=1]
[ext_resource path="res://Forest Layer 0.png" type="Texture" id=2]
[ext_resource path="res://Forest Layer 1.png" type="Texture" id=3]
[ext_resource path="res://Forest Layer 2.png" type="Texture" id=4]
[ext_resource path="res://Forest Layer 3.png" type="Texture" id=5]
[ext_resource path="res://Forest Layer 4.png" type="Texture" id=6]
[ext_resource path="res://Forest Layer 5.png" type="Texture" id=7]
[ext_resource path="res://Ambient Tones/A Drone.ogg" type="AudioStream" id=8]
[ext_resource path="res://Ambient Tones/C Drone.ogg" type="AudioStream" id=9]
[ext_resource path="res://Ambient Tones/D Drone.ogg" type="AudioStream" id=10]
[ext_resource path="res://Ambient Tones/D# Drone.ogg" type="AudioStream" id=11]
[ext_resource path="res://Ambient Tones/E Drone.ogg" type="AudioStream" id=12]
[ext_resource path="res://Ambient Tones/F Drone.ogg" type="AudioStream" id=13]
[ext_resource path="res://Ambient Tones/G Drone.ogg" type="AudioStream" id=14]

[node name="TheodoreRoethkePoem" type="Node2D"]
script = ExtResource( 1 )

[node name="poem" type="Node" parent="."]
editor/display_folded = true

[node name="stanza_0" type="Polygon2D" parent="poem"]
modulate = Color( 0.894118, 0.952941, 0.968627, 0 )
position = Vector2( 151.645, -301.379 )
polygon = PoolVector2Array( 32, 384, -0.153, 384, -0.165329, 464.734, 159.726, 464.767, 351.7, 464.513, 351.847, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="poem/stanza_0"]

[node name="RichTextLabel" type="RichTextLabel" parent="poem/stanza_0"]
modulate = Color( 0.0901961, 0.117647, 0.196078, 1 )
margin_left = 10.508
margin_top = 397.0
margin_right = 307.508
margin_bottom = 444.0
rect_scale = Vector2( 1.1, 1.1 )
text = "I wake to sleep, and take my waking slow.   
I feel my fate in what I cannot fear.   
I learn by going where I have to go."

[node name="stanza_1" type="Polygon2D" parent="poem"]
modulate = Color( 0.894118, 0.952941, 0.968627, 0 )
position = Vector2( 151.492, -205.379 )
polygon = PoolVector2Array( 32, 384, -0.153, 384, -0.165329, 464.734, 159.726, 464.767, 351.97, 464.648, 352, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="poem/stanza_1"]

[node name="RichTextLabel2" type="RichTextLabel" parent="poem/stanza_1"]
modulate = Color( 0.0901961, 0.117647, 0.196078, 1 )
margin_left = 10.508
margin_top = 397.0
margin_right = 305.508
margin_bottom = 444.0
rect_scale = Vector2( 1.1, 1.1 )
text = " We think by feeling. What is there to know?   
I hear my being dance from ear to ear.   
I wake to sleep, and take my waking slow."

[node name="stanza_2" type="Polygon2D" parent="poem"]
modulate = Color( 0.894118, 0.952941, 0.968627, 0 )
position = Vector2( 151.492, -109.379 )
polygon = PoolVector2Array( 32, 384, -0.153, 384, -0.165329, 464.734, 159.726, 464.767, 351.908, 464.763, 352, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="poem/stanza_2"]

[node name="RichTextLabel3" type="RichTextLabel" parent="poem/stanza_2"]
modulate = Color( 0.0901961, 0.117647, 0.196078, 1 )
margin_left = 10.508
margin_top = 397.0
margin_right = 335.508
margin_bottom = 444.0
rect_scale = Vector2( 1.1, 1.1 )
text = "  Of those so close beside me, which are you?   
God bless the Ground!   I shall walk softly there,   
And learn by going where I have to go."

[node name="stanza_3" type="Polygon2D" parent="poem"]
modulate = Color( 0.894118, 0.952941, 0.968627, 0 )
position = Vector2( 535.492, -301.379 )
polygon = PoolVector2Array( 32, 384, -0.153, 384, -0.165329, 464.734, 159.726, 464.767, 351.908, 464.763, 352, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="poem/stanza_3"]

[node name="RichTextLabel4" type="RichTextLabel" parent="poem/stanza_3"]
modulate = Color( 0.0901961, 0.117647, 0.196078, 1 )
margin_left = 10.508
margin_top = 397.0
margin_right = 335.508
margin_bottom = 444.0
rect_scale = Vector2( 1.1, 1.1 )
text = " Light takes the Tree; but who can tell us how?   
The lowly worm climbs up a winding stair;   
I wake to sleep, and take my waking slow."

[node name="stanza_4" type="Polygon2D" parent="poem"]
modulate = Color( 0.894118, 0.952941, 0.968627, 0 )
position = Vector2( 535.492, -205.379 )
polygon = PoolVector2Array( 32, 384, -0.153, 384, -0.165329, 464.734, 159.726, 464.767, 351.908, 464.763, 352, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="poem/stanza_4"]

[node name="RichTextLabel5" type="RichTextLabel" parent="poem/stanza_4"]
modulate = Color( 0.0901961, 0.117647, 0.196078, 1 )
margin_left = 10.508
margin_top = 397.0
margin_right = 335.508
margin_bottom = 444.0
rect_scale = Vector2( 1.1, 1.1 )
text = "Great Nature has another thing to do   
To you and me; so take the lively air,   
And, lovely, learn by going where to go."

[node name="stanza_5" type="Polygon2D" parent="poem"]
modulate = Color( 0.894118, 0.952941, 0.968627, 0 )
position = Vector2( 535.327, -109.379 )
polygon = PoolVector2Array( 32, 384, -0.153, 384, -0.165329, 464.734, 159.726, 464.767, 351.908, 464.763, 352, 384 )
__meta__ = {
"_edit_group_": true
}

[node name="Tween" type="Tween" parent="poem/stanza_5"]

[node name="RichTextLabel6" type="RichTextLabel" parent="poem/stanza_5"]
modulate = Color( 0.0901961, 0.117647, 0.196078, 1 )
margin_left = 10.0203
margin_top = 391.148
margin_right = 316.02
margin_bottom = 451.148
rect_scale = Vector2( 1.1, 1.1 )
text = "This shaking keeps me steady. I should know.   
What falls away is always. And is near.   
I wake to sleep, and take my waking slow.   
I learn by going where I have to go."

[node name="Author" type="RichTextLabel" parent="poem"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_left = 757.389
margin_top = 363.51
margin_right = 885.389
margin_bottom = 386.51
text = "-Theodore Roethke"

[node name="Tween" type="Tween" parent="poem/Author"]

[node name="forest_layers" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 510, 300 )

[node name="forest_layers_0" type="Sprite" parent="forest_layers"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -44 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="forest_layers/forest_layers_0"]

[node name="forest_layers_1" type="Sprite" parent="forest_layers"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 196.767 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="forest_layers/forest_layers_1"]

[node name="forest_layers_2" type="Sprite" parent="forest_layers"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -186 )
scale = Vector2( 1, 1.14 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="forest_layers/forest_layers_2"]

[node name="forest_layers_3" type="Sprite" parent="forest_layers"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 37 )
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="forest_layers/forest_layers_3"]

[node name="forest_layers_4" type="Sprite" parent="forest_layers"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 37 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="forest_layers/forest_layers_4"]

[node name="forest_layers_5" type="Sprite" parent="forest_layers"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 37.4543 )
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="forest_layers/forest_layers_5"]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0.72549, 0.956863, 0.972549, 1 )
margin_left = 32.0
margin_top = 32.0
margin_right = 256.0
margin_bottom = 50.0
rect_scale = Vector2( 0.8, 0.8 )
text = "press spacebar to continue poem"

[node name="MainSceneButton" type="Button" parent="."]
editor/display_folded = true
margin_left = 863.566
margin_top = 479.248
margin_right = 1009.57
margin_bottom = 499.248
text = "return to main menu"

[node name="Tween" type="Tween" parent="MainSceneButton"]

[node name="Music streams" type="Node" parent="."]

[node name="A_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 8 )

[node name="C_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 9 )

[node name="D_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 10 )

[node name="D#_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 11 )

[node name="E_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 12 )

[node name="F_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 13 )

[node name="G_Drone" type="AudioStreamPlayer" parent="Music streams"]
stream = ExtResource( 14 )
[connection signal="pressed" from="MainSceneButton" to="." method="_on_MainSceneButton_pressed"]
